kubernetes/001_basic_nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-nginx
spec:
  selector:
    matchLabels:
      app: basic-nginx
  template:
    metadata:
      labels:
        app: basic-nginx
    spec:
      containers:
      - name: basic-nginx
        image: harbor.downstream.billylieberman.com/basic_nginx/basic_nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
