kubernetes/002_basic_nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic_nginx
spec:
  selector:
    app: basic_nginx
  ports:
  - port: 80
    targetPort: 80
